@@ -32,6 +32,10 @@
 #' Third, after pressing Enter, R will try to open a browser window to sign the token. If 
 #' everything works well, you will get a message that says you can return to R. If not,
 #' try again in a few minutes to make sure your app had its settings updated properly.
+#'
+#' Note that the authentication process will NOT work correctly in RStudio. As an
+#' alternative, create your token in R from the command line interface or the R
+#' application, save it as a file, and then open it up from RStudio.
 #' 
 #'
 #' @author
